--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <li>Cross-chain transactions are ensured by Polkadot’s cross-chain message passing technology</li>
         <li>Elimination of high gas fees and network congestion</li>
         <li>A non-custodial, decentralized P2P trading platform that only allows the account holders to access funds</li>
-        <li>Trade transactions anonymously without providing any personal information</li>
+        <li>Trade anonymously without providing any personal information</li>
         <li>An open platform that allows community to propose, vote, and implement changes</li>
       </ul>
     </div>
