--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class='content column section-main' id='home'>
     <div class='left'>
       <h2>Open DeFi Platform</h2>
-      <h3>POWERED BY POLKADOT</h3>
+      <h3>Powered By <img src='image/polk.svg' /></h3>
       <p>Clover is a DeFi ecosystem supported by Polkadot parachain technology, which offers on-chain trustless trading services between different chains. Advocating maximum transparency and growth sharing model, Clover will foster a faster and more rigorous environment that allows for more possibilities.</p>
       <a class='button' href='whitepaper.pdf' target='_blank'><img src="image/arrow.svg" />Whitepaper</a>
     </div>
