--- a/service.html
+++ b/service.html
@@ -27,7 +27,7 @@
     <div class='content about-main'>
       <h2>The Next-generation DeFi Infrastructure</h2>
       <p>Clover is a trustless trading platform powered by Polkadot parachain technology, which allows interactions with cross-chain assets and DeFi applications. It is a decentralized money market for lending and borrowing, as well as a liquidity staking protocol. Clover will be governed entirely by its community, and CLV token will derive benefits from Clover’s continuing growth. Everyone will collectively contribute to the development of Clover and share the fruits.</p>
-      <a class='button' href='https://swap.ownstack.cn/' target='_blank'>Try CloverSwap</a>
+      <a class='button' href='https://swap.cloverdefi.com/' target='_blank'>Try CloverSwap</a>
     </div>
   </div>
   <div class='content column about-trade-protocol'>
