Add Effect to Home Page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="style/reset.css" />
 	<link rel="stylesheet" href="style/common.css" />
 	<link rel="stylesheet" href="style/info.css" />
+  <link rel="stylesheet" href="style/effect.css" />
   <link rel='stylesheet' href='style/animation.css' />
   <script src='script/jquery.js'></script>
 </head>
@@ -30,7 +31,7 @@
       <a class='button' href='whitepaper.pdf' target='_blank'><img src="image/arrow.svg" />Whitepaper</a>
     </div>
   </div>
-  <div class='back-black' id='features'>
+  <div class='back-black features-section' id='features'>
     <div class='content section-features'>
       <h2>NEXT GENERATION DEFI</h2>
       <p>Clover is a trustless trading platform powered by Polkadot parachain technology, that allows interactions of cross-chain assets and DeFi applications. It is a decentralized money market for lending and borrowing, as well as a liquidity staking protocol. Clover will be governed entirely by its community, and CLV token will derive benefits from Clover’s continuing growth. Together, everyone will contribute to the success of Clover.</p>
@@ -82,6 +83,7 @@
       </ul>
     </div>
   </div>
+  <div class='token-section'>
   <div class='token-top' id='token'><div class='content'></div></div>
   <div class='back-gray section-token'>
     <div class='content'>
@@ -96,6 +98,7 @@
     </div>
   </div>
   <div class='token-bottom'><div class='content'></div></div>
+  </div>
   <div class='section-why' id='reasone'>
     <div class='content'>
       <h2>WHOLISTIC & SMART DESIGN</h2>
@@ -119,7 +122,7 @@
         </dl>
     </div>
   </div>
-  <div id='ecosystem'>
+  <div id='ecosystem' class='ecosystem-section'>
     <div class='section-ecosystem'>
       <div class='content'>
         <h2>ecosystem</h2>
@@ -313,5 +316,6 @@
   </div>
   <script src='script/slider.js'></script>
   <script src='script/info.js'></script>
+  <script src='script/animation.js'></script>
 </body>
 </html>
