--- a/about.html
+++ b/about.html
@@ -27,6 +27,93 @@
       <p>We are a global and diversified team with presences in over 10+ countries. Our team is made up of industry experts and technologists from leading information technology and blockchain companies including Ethereum, Polkadot, BitGo, Aliababa, Amazon, Oracle, Google, and more.</p>
     </div>
   </div>
+  <div class='content section-team'>
+    <h3>Leadership Team</h3>
+    <div class='leadership'>
+      <a href='https://www.linkedin.com/in/chrislky/' target='_blank'>
+        <img src='image/team/chris-li.svg' alt='Chris Li' />
+        <span>Chris Li</span>
+      </a>
+      <a href='https://www.linkedin.com/in/barek-sekandari-597752153/' target='_blank'>
+        <img src='image/team/barek.svg' alt='Barek Sekandari' />
+        <span>Barek Sekandari</span>
+      </a>
+      <a href='https://www.linkedin.com/in/garlam/' target='_blank'>
+        <img src='image/team/garlam.svg' alt='Garlam Won' />
+        <span>Garlam Won</span>
+      </a>
+      <a href='https://www.linkedin.com/in/chris-williamson-aa90b290/' target='_blank'>
+        <img src='image/team/chris.png' alt='Chris Williamson' />
+        <span>Chris Williamson</span>
+      </a>
+      <a href='https://www.linkedin.com/in/marinadanylyuk/' target='_blank'>
+        <img src='image/team/marina.svg' alt='Marina Danylyuk' />
+        <span>Marina Danylyuk</span>
+      </a>
+    </div>
+    <h3>Engineering Team</h3>
+    <div class='engineer'>
+      <dl>
+        <dt><img src='image/team/richard.svg' alt='Richard Han' /></dt>
+        <dd>Richard Han</dd>
+        <dd><a  href='https://www.linkedin.com/in/pangwa/' target='_blank'>
+          <img src='image/team/in.svg' /></a>
+          <a  href='https://github.com/pangwa' target='_blank'>
+          <img src='image/team/github.svg' /></a></dd>
+      </dl>
+      <dl>
+        <dt><img src='image/team/werlandy.svg' alt='Werlandy Wang' /></dt>
+        <dd>Werlandy Wang</dd>
+        <dd><a  href='https://www.linkedin.com/in/werlandy' target='_blank'>
+          <img src='image/team/in.svg' /></a>
+          <a  href='https://github.com/werlandy' target='_blank'>
+          <img src='image/team/github.svg' /></a></dd>
+      </dl>
+      <dl>
+        <dt><img src='image/team/neo.svg' alt='Neo Wang' /></dt>
+        <dd>Neo Wang</dd>
+        <dd><a  href='https://www.linkedin.com/in/neowangdesigner' target='_blank'>
+          <img src='image/team/in.svg' /></a>
+          <a  href='https://github.com/zhanyata' target='_blank'>
+          <img src='image/team/github.svg' /></a></dd>
+      </dl>
+      <dl>
+        <dt><img src='image/team/deyang.png' alt='Deyang Liu' /></dt>
+        <dd>Deyang Liu</dd>
+        <dd><a  href='https://www.linkedin.com/in/deyangliu/' target='_blank'>
+          <img src='image/team/in.svg' /></a>
+          <a  href='https://github.com/ldy0909061' target='_blank'>
+          <img src='image/team/github.svg' /></a></dd>
+      </dl>
+      <dl>
+        <dt><img src='image/team/gavin.svg' alt='Gavin Fu' /></dt>
+        <dd>Gavin Fu</dd>
+        <dd><a  href='https://www.linkedin.com/in/gavfu' target='_blank'>
+          <img src='image/team/in.svg' /></a>
+          <a  href='https://github.com/gavfu' target='_blank'>
+          <img src='image/team/github.svg' /></a></dd>
+      </dl>
+    </div>
+    <h3>Advisory Board</h3>
+    <div class='advisory'>
+      <dl>
+        <dt><img src='image/team/jia.svg' alt='Jia Yaoqi' /></dt>
+        <dd>Jia Yaoqi</dd>
+      </dl>
+      <dl>
+        <dt><img src='image/team/ryan.svg' alt='Ryan Rodenbaugh' /></dt>
+        <dd>Ryan Rodenbaugh</dd>
+      </dl>
+      <dl>
+        <dt><img src='image/team/iron.svg' alt='Iron Chung' /></dt>
+        <dd>Iron Chung</dd>
+      </dl>
+      <dl>
+        <dt><img src='image/team/minki.svg' alt='Minki Kang' /></dt>
+        <dd>Minki Kang</dd>
+      </dl>
+    </div>
+  </div>  
   <div class='content section-join'>
     <h2>Join Our Team</h2>
     <p>With years of experiences and passions in the space, we are looking to disrupt the decentralized financial world with advanced technologies. Join us today and build the future.</p>
