--- a/index.html
+++ b/index.html
@@ -36,36 +36,32 @@
       <h2>NEXT GENERATION DEFI</h2>
       <p>Clover is a trustless trading platform powered by Polkadot parachain technology, that allows interactions of cross-chain assets and DeFi applications. It is a decentralized money market for lending and borrowing, as well as a liquidity staking protocol. Clover will be governed entirely by its community, and CLV token will derive benefits from Clover’s continuing growth. Together, everyone will contribute to the success of Clover.</p>
       <div class='feature-area'>
-        <div class='feature-content slider-item'>
+        <div class='feature-content'>
           <dl class='feature-item'>
-            <dt>Swap</dt>
-            <dd>Trade directly from the user’s wallet</dd>
+            <dt>Staking Liquidity<br />Protocol</dt>
+            <dd>【To solve the illiquidity challenge of staked assets,】 Staked assets(ABCs) become fungible and liquid SABCs exploit the derivative value of the ABCs in many applications.</dd>
           </dl>
           <dl class='feature-item'>
-            <dt>Wrapper</dt>
-            <dd>Trade assets between different chains instantly</dd>
+            <dt>Decentralized<br />Trading Protocol</dt>
+            <dd>【To increase the trading depth of book and reduce transaction slippage, 】the trading protocol is a protocol which is built upon AMM but with an extra function of pending order.</dd>
           </dl>
           <dl class='feature-item'>
-            <dt>Vault</dt>
-            <dd>Receive tradable staking tokens </dd>
+            <dt>Decentralized<br />Lending Protocol</dt>
+            <dd>The lending protocol is built based on Compound with the following extra features: time dimension, lending supply and demand index, real-time automate interest rate calculation.</dd>
           </dl>
           <dl class='feature-item'>
-            <dt>Lending</dt>
-            <dd>Deposit assets to earn interest or borrow</dd>
+            <dt>Token Dividend<br />Protocol</dt>
+            <dd>Pledge liquidity, trading and lending will all get the token incentives of this agreement.</dd>
           </dl>
           <dl class='feature-item'>
-            <dt>Stablecoins</dt>
-            <dd>Support native stablecoin issuance</dd>
+            <dt>Governance<br />Protocol</dt>
+            <dd>The governance protocol will implement on-chain voting and execution, minimizing the impact of human intervention.</dd>
           </dl>
           <dl class='feature-item'>
-            <dt>Governance</dt>
-            <dd>Allow users to implement or change modules</dd>
+            <dt>Synthetic Asset<br />Protocol</dt>
+            <dd>Synthetic assets will be issued by pledging various assets of value, which is under the protection of Insurance Pool.</dd>
           </dl>
         </div>
-        <ul class='control'>
-          <li class='left-control'></li>
-          <li class='right-control'></li>
-        </ul>
       </div>
       <a class='text-button' href='service.html'>Read More</a>
     </div>
