--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
       <p>Clover is a trustless trading platform powered by Polkadot parachain technology, that allows interactions of cross-chain assets and DeFi applications. It is a decentralized money market for lending and borrowing, as well as a liquidity staking protocol. Clover will be governed entirely by its community, and CLV token will derive benefits from Clover’s continuing growth. Together, everyone will contribute to the success of Clover.</p>
       <div class='feature-area'>
         <div class='feature-content'>
-          <dl class='feature-item'>
-            <dt><a>Staking Liquidity<br />Protocol</a></dt>
-            <dd>【To solve the illiquidity challenge of staked assets,】 Staked assets(ABCs) become fungible and liquid SABCs exploit the derivative value of the ABCs in many applications.</dd>
+          <dl class='feature-item' id='feature-item-1'>
+            <dt><a href='#feature-item-1'>Staking Liquidity<br />Protocol</a></dt>
+            <dd>To solve the illiquidity challenge of staked assets, Staked assets(ABCs) become fungible and liquid SABCs exploit the derivative value of the ABCs in many applications.</dd>
           </dl>
-          <dl class='feature-item'>
-            <dt><a>Decentralized<br />Trading Protocol</a></dt>
-            <dd>【To increase the trading depth of book and reduce transaction slippage, 】the trading protocol is a protocol which is built upon AMM but with an extra function of pending order.</dd>
+          <dl class='feature-item' id='feature-item-2'>
+            <dt><a href='#feature-item-2'>Decentralized<br />Trading Protocol</a></dt>
+            <dd>To increase the trading depth of book and reduce transaction slippage, the trading protocol is a protocol which is built upon AMM but with an extra function of pending order.</dd>
           </dl>
-          <dl class='feature-item'>
-            <dt><a>Decentralized<br />Lending Protocol</a></dt>
+          <dl class='feature-item' id='feature-item-3'>
+            <dt><a href='#feature-item-3'>Decentralized<br />Lending Protocol</a></dt>
             <dd>The lending protocol is built based on Compound with the following extra features: time dimension, lending supply and demand index, real-time automate interest rate calculation.</dd>
           </dl>
-          <dl class='feature-item'>
-            <dt><a>Token Dividend<br />Protocol</a></dt>
+          <dl class='feature-item' id='feature-item-4'>
+            <dt><a href='#feature-item-4'>Token Dividend<br />Protocol</a></dt>
             <dd>Pledge liquidity, trading and lending will all get the token incentives of this agreement.</dd>
           </dl>
-          <dl class='feature-item'>
-            <dt><a>Governance<br />Protocol</a></dt>
+          <dl class='feature-item' id='feature-item-5'>
+            <dt><a href='#feature-item-5'>Governance<br />Protocol</a></dt>
             <dd>The governance protocol will implement on-chain voting and execution, minimizing the impact of human intervention.</dd>
           </dl>
-          <dl class='feature-item'>
-            <dt><a>Synthetic Asset<br />Protocol</a></dt>
+          <dl class='feature-item' id='feature-item-6'>
+            <dt><a href='#feature-item-6'>Synthetic Asset<br />Protocol</a></dt>
             <dd>Synthetic assets will be issued by pledging various assets of value, which is under the protection of Insurance Pool.</dd>
           </dl>
         </div>
