Hide Engineering Team

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <span>Marina Danylyuk</span>
       </a>
     </div>
-    <h3>Engineering Team</h3>
+    <!--<h3>Engineering Team</h3>
     <div class='engineer'>
       <dl>
         <dt><img src='image/team/richard.svg' alt='Richard Han' /></dt>
@@ -93,7 +93,7 @@
           <a  href='https://github.com/gavfu' target='_blank'>
           <img src='image/team/github.svg' /></a></dd>
       </dl>
-    </div>
+    </div>-->
     <h3>Advisory Board</h3>
     <div class='advisory'>
       <dl>
