--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <div class='left'>
       <h2>Open DeFi Platform</h2>
       <h3>Powered By <img src='image/polk.svg' /></h3>
-      <p>Clover is a DeFi ecosystem supported by Polkadot parachain technology, which offers on-chain trustless trading services between different chains. Advocating maximum transparency and growth sharing model, Clover will foster a faster and more rigorous environment that allows for more possibilities.</p>
+      <p>Clover is a Polkadot-built DeFi portal and service provider that offers a series of innovative products and services. Through putting together an ecosystem that gathers users, community developers and upper-layer applications, Clover will foster an all-in-one open DeFi platform that allows for more possibilities.</p>
       <a class='button' href='whitepaper.pdf' target='_blank'><img src="image/arrow.svg" />Whitepaper</a>
     </div>
   </div>
   <div class='back-black features-section' id='features'>
     <div class='content section-features'>
-      <h2>NEXT GENERATION DEFI</h2>
-      <p>Clover is a trustless trading platform powered by Polkadot parachain technology, that allows interactions of cross-chain assets and DeFi applications. It is a decentralized money market for lending and borrowing, as well as a liquidity staking protocol. Clover will be governed entirely by its community, and CLV token will derive benefits from Clover’s continuing growth. Together, everyone will contribute to the success of Clover.</p>
+      <h2>DEFI SERVICE PROVIDER</h2>
+      <p>Clover’s already-integrated DeFi protocol library, allows a lego-like building environment that will significantly reduce the time and technical threshold for the development of upper-layer applications. Clover will foster an enhanced development environment that unleashes the full potential of decentralized finance.</p>
       <div class='feature-area'>
         <div class='feature-content'>
           <dl class='feature-item' id='feature-item-1'>
@@ -79,6 +79,29 @@
       </ul>
     </div>
   </div>
+  <div class='section-why' id='reasone'>
+    <div class='content'>
+      <h2>WHOLISTIC & SMART DESIGN</h2>
+      <dl>
+          <dt>Dapp Layer</dt>
+          <dd>Swap, Lending, Aggregator, Third Party Apps</dd>
+        </dl>
+        <dl>
+          <dt>Tools</dt>
+          <dd>Wallet, Block Explorer, Polkadot JS...</dd>
+        </dl>
+        <dl>
+          <dt>Protocol Layer</dt>
+          <dd>A series of modular DeFi protocols</dd>
+        </dl>
+        <dl>
+          <dt>Clover Chain</dt>
+        </dl>
+        <dl>
+          <dt>Polkadot Relay Chain & Parachains</dt>
+        </dl>
+    </div>
+  </div>
   <div class='token-section'>
   <div class='token-top' id='token'><div class='content'></div></div>
   <div class='back-gray section-token'>
@@ -94,29 +117,6 @@
     </div>
   </div>
   <div class='token-bottom'><div class='content'></div></div>
-  </div>
-  <div class='section-why' id='reasone'>
-    <div class='content'>
-      <h2>WHOLISTIC & SMART DESIGN</h2>
-      <dl>
-          <dt>Dapp Layer</dt>
-          <dd>Swap, Lending, Aggregator, Third Party Apps</dd>
-        </dl>
-        <dl>
-          <dt>Tools</dt>
-          <dd>Wallet, Block Explorer, Polkadot JS...</dd>
-        </dl>
-        <dl>
-          <dt>Protocol Layer</dt>
-          <dd>Protocol External, Smart Contract...</dd>
-        </dl>
-        <dl>
-          <dt>Clover Chain</dt>
-        </dl>
-        <dl>
-          <dt>Polkadot Relay Chain & Parachains</dt>
-        </dl>
-    </div>
   </div>
   <div id='ecosystem' class='ecosystem-section'>
     <div class='section-ecosystem'>
