Update Content Follow the Design

--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
   </div>
   <div class='section-product'>
     <div class='content'>
-      <h2>UNLEASH THE POWER OF CLOVER</h2>
-      <ul>
-        <li>Allow specialized blockchains to communicate with each other</li>
-        <li>Cross-chain transactions are ensured by Polkadot’s cross-chain message passing technology</li>
-        <li>Elimination of high gas fees and network congestion</li>
-        <li>A non-custodial, decentralized P2P trading platform that only allows the account holders to access funds</li>
-        <li>Trade anonymously without providing any personal information</li>
-        <li>An open platform that allows community to propose, vote, and implement changes</li>
-      </ul>
+      <h2>ONE STOP DEFI PORTAL</h2>
+      <dl>
+        <dt>Multi-chain wallet</dt>
+        <dd>Convenient and safe multi-chain wallet which allows users to deposit, transfer and swap multiple assets.</dd>
+      </dl>
+      <dl>
+        <dt>Multi-functionality explorer</dt>
+        <dd>Explorer becomes a convenient one-stop portal to various applications with powerful data analytics and visualization functions.</dd>
+      </dl>
     </div>
   </div>
   <div class='section-why' id='reasone'>
