--- a/service.html
+++ b/service.html
@@ -23,11 +23,10 @@
       </div>
     </div>
   </div>
-  <div class='back-black'>
-    <div class='content about-main'>
-      <h2>The Next-generation DeFi Infrastructure</h2>
-      <p>Clover is a trustless trading platform powered by Polkadot parachain technology, which allows interactions with cross-chain assets and DeFi applications. It is a decentralized money market for lending and borrowing, as well as a liquidity staking protocol. Clover will be governed entirely by its community, and CLV token will derive benefits from Clover’s continuing growth. Everyone will collectively contribute to the development of Clover and share the fruits.</p>
-      <a class='button' href='https://swap.cloverdefi.com/' target='_blank'>Try CloverSwap</a>
+  <div class='about-main'>
+    <div class='content'>
+      <h2>four main agreements</h2>
+      <p>Of Clover OS</p>
     </div>
   </div>
   <div class='content column about-trade-protocol'>
@@ -36,58 +35,82 @@
     </div>
     <div class='right'>
       <dl>
-        <dt>Intuitive</dt>
-        <dd>Trades are settled automatically at a price determined by the liquidity of the two assets of a pair via an automated market maker (AMM).</dd>
+        <dt>Functions</dt>
+        <dd>Clover Back End connects to the Polkadot ecosystem through slots, sharing Polkadot's security and consensus.</dd>
+        <dd>Clover Back End supports various Defi basic protocols and tools.</dd>
       </dl>
       <dl>
-        <dt>Provide liquidity</dt>
-        <dd>The default transaction fee is set to 0.3% and will be proportionally distributed to liquidity providers.</dd>
-      </dl>
-      <dl>
-        <dt>Open</dt>
-        <dd>Any trading pair can be supported after a governance vote.</dd>
+        <dt>Development</dt>
+        <dd>The Clover chain and basic protocols are developed by first-party developers.</dd>
+        <dd>Extension protocols and basic tools are developed by second-party developers.</dd>
       </dl>
     </div>
   </div>
-  <div class='back-gray'>
-    <div class='content column about-money-market'>
+    <div class='content column about-money-market back-gray'>
       <div class='left'>
         <dl>
-          <dt>Earn interest</dt>
-          <dd>Deposit assets to lend them out to others and receive interest in return.</dd>
+          <dt>Functions</dt>
+          <dd>Clover Front End, through Clover Kernel technology, realizes the adaptation and operation of multiple OSs.</dd>
+          <dd>User Interface includes user dApp entrance, user wallet, and one-stop asset explorer.</dd>
         </dl>
         <dl>
-          <dt>Borrow funds</dt>
-          <dd>Provide collateral (including staked assets via our staking liquidity protocol) to receive a loan in supported tokens. Clover allows you to put your assets to work, leverage your longs or build a short position on an asset.</dd>
-        </dl>
-        <dl>
-          <dt>Algorithmically controlled</dt>
-          <dd>The dynamic interest rate changes according to the supply and demand values.</dd>
+          <dt>Development</dt>
+          <dd>Clover Kernel and User Interface are developed by first-party developers.</dd>
+          <dd>
         </dl>
       </div>
       <div class='right'>
         <img src='image/market-image.svg' />
       </div>
     </div>
-  </div>
   <div class='content column about-staking-liquidity'>
     <div class='left'>
       <img src='image/stake-image.svg' />
     </div>
     <div class='right'>
       <dl>
-        <dt>Liquid</dt>
-        <dd>The protocol tokenizes staked assets to make them tradeable. Stake tokens (e.g. DOT) in a pool and receive pool tokens (e.g. SDOT) representing your share of the total amount in the pool protocol.</dd>
+        <dt>Functions</dt>
+        <dd>Clover High Level Smart Contract, through Tulip technology, realizes one-stop development and cross-chain deployment of Smart Contract.</dd>
+        <dd>Tulip language, basic development tools, and development documents are implemented by first-party developers.</dd>
+        <dd>SC developers, based on Clover development tools, develop a variety of dApps with a lower cost.</dd>
+        <dd>One-click deployment reduces the deployment cost of rented network, storage, and bandwidth.</dd>
       </dl>
       <dl>
-        <dt>Unlocking the value of staked assets</dt>
-        <dd>Use your pool tokens in other protocols across all chains on the Polkadot network. For instance, use them as collateral to borrow assets on our money market protocol.</dd>
-      </dl>
-      <dl>
-        <dt>Algorithmically secured</dt>
-        <dd>The collateralization rate is determined by an algorithm to increase capital efficiency without sacrificing security.</dd>
+        <dt>Development</dt>
+        <dd>Tulip and development tools are developed by first-party developers.</dd>
+        <dd>dApps are developed and operated by third-party developers.</dd>
       </dl>
     </div>
+  </div>
+    <div class='content column about-storage back-gray'>
+      <div class='left'>
+        <dl>
+          <dt>Functions</dt>
+          <dd>Cover Storage is built on block chain networks such as Crust and  IPFS.</dd>
+          <dd>Transaction data and status are stored on the Clover blockchain. UI and files are stored on a distributed storage blockchain.</dl>
+      </div>
+      <div class='right'>
+        <img src='image/storage-image.svg' />
+      </div>
+    </div>
+  <div class='content section-contain'>
+    <h2>What does Kernel contain ?</h2>
+    <dl>
+      <dt>Rose - Universal Crypto Signer</dt>
+      <dd>responsible for supporting cross-chain signatures.</dd>
+    </dl>
+    <dl>
+      <dt>Tulip - Higher Level Smart Contract Language</dt>
+      <dd>responsible for one-stop development and cross-chain deployment of Smart Contract.</dd>
+    </dl>
+    <dl>
+      <dt>Skura - H5 to Native Adapter</dt>
+      <dd>responsible for the adaptation of front-end H5 and native language.</dd>
+    </dl>
+    <dl>
+      <dt>Orchid - Deep Learning Indexing System</dt>
+      <dd>responsible for indexing, querying and recommending dApps through deep learning.</dd>
+    </dl>
   </div>
   <div class='footer back-black'>
     <div class='content column'>
