Update index page's desktop view

--- a/index.html
+++ b/index.html
@@ -23,100 +23,83 @@
       </ul>
     </div>
   </div>
-  <div class='content column section-main' id='home'>
-    <div class='left'>
-      <h2>Open DeFi Platform</h2>
-      <h3>Powered By <img src='image/polk.svg' /></h3>
-      <p>Clover is a Polkadot-built DeFi portal and service provider that offers a series of innovative products and services. Through putting together an ecosystem that gathers users, community developers and upper-layer applications, Clover will foster an all-in-one open DeFi platform that allows for more possibilities.</p>
-      <a class='button' href='whitepaper.pdf' target='_blank'><img src="image/arrow.svg" />Whitepaper</a>
+  <div class='content section-main' id='home'>
+    <div class='container'>
+      <div class='image'><img src='image/index/global.png' /></div>
+      <div class='text'><img src='image/index/main-text.png' /></div>
+      <p>Clover is a Substrate-based Polkadot parachain. Clover is committed to providing easy-to-use blockchain infrastructure and creating a one-stop comprehensive infrastructure platform, which reduce the threshold and cost for developers, and bring great returns to developers.</div>
     </div>
   </div>
-  <div class='back-black features-section' id='features'>
+  <div class='back-gray features-section' id='features'>
     <div class='content section-features'>
-      <h2>DEFI SERVICE PROVIDER</h2>
-      <p>Clover’s already-integrated DeFi protocol library, allows a lego-like building environment that will significantly reduce the time and technical threshold for the development of upper-layer applications. Clover will foster an enhanced development environment that unleashes the full potential of decentralized finance.</p>
-      <div class='feature-area'>
-        <div class='feature-content'>
-          <dl class='feature-item' id='feature-item-1'>
-            <dt><a href='#feature-item-1'>Staking Liquidity<br />Protocol</a></dt>
-            <dd>To solve the illiquidity challenge of staked assets, Staked assets(ABCs) become fungible and liquid SABCs exploit the derivative value of the ABCs in many applications.</dd>
-          </dl>
-          <dl class='feature-item' id='feature-item-2'>
-            <dt><a href='#feature-item-2'>Decentralized<br />Trading Protocol</a></dt>
-            <dd>To increase the trading depth of book and reduce transaction slippage, the trading protocol is a protocol which is built upon AMM but with an extra function of pending order.</dd>
-          </dl>
-          <dl class='feature-item' id='feature-item-3'>
-            <dt><a href='#feature-item-3'>Decentralized<br />Lending Protocol</a></dt>
-            <dd>The lending protocol is built based on Compound with the following extra features: time dimension, lending supply and demand index, real-time automate interest rate calculation.</dd>
-          </dl>
-          <dl class='feature-item' id='feature-item-4'>
-            <dt><a href='#feature-item-4'>Token Dividend<br />Protocol</a></dt>
-            <dd>Pledge liquidity, trading and lending will all get the token incentives of this agreement.</dd>
-          </dl>
-          <dl class='feature-item' id='feature-item-5'>
-            <dt><a href='#feature-item-5'>Governance<br />Protocol</a></dt>
-            <dd>The governance protocol will implement on-chain voting and execution, minimizing the impact of human intervention.</dd>
-          </dl>
-          <dl class='feature-item' id='feature-item-6'>
-            <dt><a href='#feature-item-6'>Synthetic Asset<br />Protocol</a></dt>
-            <dd>Synthetic assets will be issued by pledging various assets of value, which is under the protection of Insurance Pool.</dd>
-          </dl>
-        </div>
-      </div>
-      <a class='text-button' href='service.html'>Read More</a>
+      <h2 class='h2-underline'>OUR VISION</h2>
+      <ul>
+        <li>Bring most Benefi<br/>to developer.</li>
+        <li>dApp to eApp<br />(Eternal App).</li>
+        <li>Connecting blockchain<br/>to everything.</li>
+      </ul>
     </div>
   </div>
   <div class='section-product'>
     <div class='content'>
-      <h2>ONE STOP DEFI PORTAL</h2>
-      <dl>
-        <dt>Multi-chain wallet</dt>
-        <dd>Convenient and safe multi-chain wallet which allows users to deposit, transfer and swap multiple assets.</dd>
-      </dl>
-      <dl>
-        <dt>Multi-functionality explorer</dt>
-        <dd>Explorer becomes a convenient one-stop portal to various applications with powerful data analytics and visualization functions.</dd>
-      </dl>
+      <h2 class='h2-underline'>CLOVER OS FRAME</h2>
+      <div class='product-content'>
+        <div class='product-left'>
+          <p>The bottom layer of Clover OS is built on blockchain. Application states are built on Polkadot network, and the storage is built on IPFS.</p>
+          <p>Clover is supported by four main agreements:</p>
+          <ol>
+            <li>Smart Contract protocol layer: supports one-stop cross-chain deployment and calls of dApp</li>
+            <li>Front End protocol layer: supports front-end multi-OS adaptation and operation.</li>
+            <li>Storage protocol layer: supports distributed storage of dApp data.</li>
+            <li>Back End protocol layer: supports various basic Defi protocols.</li>
+          </ol>
+        </div>
+        <img src='image/index/kernel.png' width='580px' />
+      </div>
     </div>
   </div>
   <div class='section-why' id='reasone'>
     <div class='content'>
-      <h2>WHOLISTIC & SMART DESIGN</h2>
-      <dl>
-          <dt>Dapp Layer</dt>
-          <dd>Swap, Lending, Aggregator, Third Party Apps</dd>
-        </dl>
-        <dl>
-          <dt>Tools</dt>
-          <dd>Wallet, Block Explorer, Polkadot JS...</dd>
-        </dl>
-        <dl>
-          <dt>Protocol Layer</dt>
-          <dd>A series of modular DeFi protocols</dd>
-        </dl>
-        <dl>
-          <dt>Clover Chain</dt>
-        </dl>
-        <dl>
-          <dt>Polkadot Relay Chain & Parachains</dt>
-        </dl>
+      <h2 class='h2-underline'>CLOVER OS PRODUCT</h2>
+      <div class='why-content'>
+        <div class='item'>
+          <img src='image/index/business.png' />
+          <dl>
+            <dt>Products for users:<br />Wallet + Browser</dt>
+            <dd>a  Multi-chain wallet (can be easily swapped);</dd>
+            <dd>b  Applications explorer</dd>
+            <dd>c  Visual browsing of on-chain assets</dd>
+          </dl>
+        </div>
+        <div class='item'>
+          <img src='image/index/user.png' />
+          <dl>
+            <dt>Clover Products for businesses:<br />Technology stack + community</dt>
+            <dd>a  Polkadot’s availability for EVM</dd>
+            <dd>b  standardized development kit for dapps.</dd>
+          </dl>
+        </div>
+      </div>
     </div>
   </div>
-  <div class='token-section'>
-  <div class='token-top' id='token'><div class='content'></div></div>
-  <div class='back-gray section-token'>
+  <div class='token-section' id='token'>
     <div class='content'>
-      <h2>CLV TOKEN</h2>
-      <ul>
-        <li>Stake to run nodes</li>
-        <li>Transact on exchanges and marketplaces</li>
-        <li>Earn rewards from platform usage</li>
-        <li>Participate in governance activities for a pre-determined set of parameters</li>
-      </ul>
-      <a href='token.html' class='text-button'>Read More</a>
+      <h2 class='h2-underline'>CLV INTRODUCE</h2>
+      <div class='token-content'>
+        <div class='c-1'>
+          <p>Earn rewards from platform usage</p>
+          <p>Participate in governance activities for a pre-determined set of parameters</p>
+        </div>
+        <div class='c-2'>
+          <img src='image/index/introduce.png' />
+        </div>
+        <div class='c-3'>
+          <p>Incentivize community and ecosystem contributors</p>
+          <p>Stake to run nodes</p>
+          <p>Transact on exchanges and marketplaces</p>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class='token-bottom'><div class='content'></div></div>
   </div>
   <div id='ecosystem' class='ecosystem-section'>
     <div class='section-ecosystem'>
