Adjust home page's mobile view. Add team member.

--- a/about.html
+++ b/about.html
@@ -30,6 +30,10 @@
   <div class='content section-team'>
     <h3>Leadership Team</h3>
     <div class='leadership'>
+      <a href='https://www.linkedin.com/in/burak-ke%C3%A7eli/' target='_blank'>
+        <img src='image/team/burak-ke.jpg' alt='Burak Ke' />
+        <span>Burak Ke</span>
+      </a>
       <a href='https://www.linkedin.com/in/chrislky/' target='_blank'>
         <img src='image/team/chris-li.svg' alt='Chris Li' />
         <span>Chris Li</span>
