--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
   </div>
   <div class='content section-main' id='home'>
     <div class='container'>
-      <div class='image'><img src='image/index/global.png' /></div>
-      <div class='text'><img src='image/index/main-text.png' /></div>
-      <p>Clover is a Substrate-based Polkadot parachain. Clover is committed to providing easy-to-use blockchain infrastructure and creating a one-stop comprehensive infrastructure platform, which reduce the threshold and cost for developers, and bring great returns to developers.</div>
+      <div class='main-item'>
+        <div class='image'><img src='image/index/global.jpg' /></div>
+      </div>
+      <div class='main-item'>
+        <div class='text'><img src='image/index/main-text.png' /></div>
+      </div>
+      <div class='main-item'>
+        <p>Clover is a Substrate-based Polkadot parachain. Clover is committed to providing easy-to-use blockchain infrastructure and creating a one-stop comprehensive infrastructure platform, which reduce the threshold and cost for developers, and bring great returns to developers.</div>
+      </div>
+    <a class='button' href='whitepaper.pdf' target='_blank'>Whitepaper</a>
     </div>
   </div>
   <div class='back-gray features-section' id='features'>
