--- a/index.html
+++ b/index.html
@@ -25,36 +25,36 @@
   </div>
   <div class='content section-main' id='home'>
     <div class='container'>
-      <div class='main-item'>
+      <div class='main-item m-1'>
         <div class='image'><img src='image/index/global.jpg' /></div>
       </div>
-      <div class='main-item'>
+      <div class='main-item m-2'>
         <div class='text'><img src='image/index/main-text.png' /></div>
       </div>
-      <div class='main-item'>
+      <div class='main-item m-3'>
         <p>Clover is a Substrate-based Polkadot parachain. Clover is committed to providing easy-to-use blockchain infrastructure and creating a one-stop comprehensive infrastructure platform, which reduce the threshold and cost for developers, and bring great returns to developers.</div>
       </div>
-    <a class='button' href='whitepaper.pdf' target='_blank'>Whitepaper</a>
+      <a class='button m-4' href='whitepaper.pdf' target='_blank'>Whitepaper</a>
     </div>
   </div>
   <div class='back-gray features-section' id='features'>
     <div class='content section-features'>
       <h2 class='h2-underline'>OUR VISION</h2>
       <ul>
-        <li>Bring most Benefi<br/>to developer.</li>
-        <li>dApp to eApp<br />(Eternal App).</li>
-        <li>Connecting blockchain<br/>to everything.</li>
+        <li class='li-1'>Bring most Benefi<br/>to developer.</li>
+        <li class='li-2'>dApp to eApp<br />(Eternal App).</li>
+        <li class='li-3'>Connecting blockchain<br/>to everything.</li>
       </ul>
     </div>
   </div>
   <div class='section-product'>
+    <h2 class='h2-underline'>CLOVER OS FRAME</h2>
     <div class='content'>
-      <h2 class='h2-underline'>CLOVER OS FRAME</h2>
       <div class='product-content'>
         <div class='product-left'>
-          <p>The bottom layer of Clover OS is built on blockchain. Application states are built on Polkadot network, and the storage is built on IPFS.</p>
-          <p>Clover is supported by four main agreements:</p>
-          <ol>
+          <p class='m-1'>The bottom layer of Clover OS is built on blockchain. Application states are built on Polkadot network, and the storage is built on IPFS.</p>
+          <p class='m-2'>Clover is supported by four main agreements:</p>
+          <ol class='m-3'>
             <li>Smart Contract protocol layer: supports one-stop cross-chain deployment and calls of dApp</li>
             <li>Front End protocol layer: supports front-end multi-OS adaptation and operation.</li>
             <li>Storage protocol layer: supports distributed storage of dApp data.</li>
@@ -70,8 +70,8 @@
       <h2 class='h2-underline'>CLOVER OS PRODUCT</h2>
       <div class='why-content'>
         <div class='item'>
-          <img src='image/index/business.png' />
-          <dl>
+          <img class='m-1' src='image/index/business.png' />
+          <dl class='m-2'>
             <dt>Products for users:<br />Wallet + Browser</dt>
             <dd>a  Multi-chain wallet (can be easily swapped);</dd>
             <dd>b  Applications explorer</dd>
@@ -79,8 +79,8 @@
           </dl>
         </div>
         <div class='item'>
-          <img src='image/index/user.png' />
-          <dl>
+          <img class='m-3' src='image/index/user.png' />
+          <dl class='m-4'>
             <dt>Clover Products for businesses:<br />Technology stack + community</dt>
             <dd>a  Polkadot’s availability for EVM</dd>
             <dd>b  standardized development kit for dapps.</dd>
@@ -94,16 +94,16 @@
       <h2 class='h2-underline'>CLV INTRODUCE</h2>
       <div class='token-content'>
         <div class='c-1'>
-          <p>Earn rewards from platform usage</p>
-          <p>Participate in governance activities for a pre-determined set of parameters</p>
+          <p class='m-2'>Earn rewards from platform usage</p>
+          <p class='m-3'>Participate in governance activities for a pre-determined set of parameters</p>
         </div>
-        <div class='c-2'>
+        <div class='c-2 m-1'>
           <img src='image/index/introduce.png' />
         </div>
         <div class='c-3'>
-          <p>Incentivize community and ecosystem contributors</p>
-          <p>Stake to run nodes</p>
-          <p>Transact on exchanges and marketplaces</p>
+          <p class='m-4'>Incentivize community and ecosystem contributors</p>
+          <p class='m-5'>Stake to run nodes</p>
+          <p class='m-6'>Transact on exchanges and marketplaces</p>
         </div>
       </div>
     </div>
